objects/QwikScore__c.object
<CustomObject>
    <description>Object to hold survey questions.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this survey available to be taken?</description>
        <inlineHelpText>Is this survey available to be taken?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <description>What is the average score for this survey?</description>
        <formula>TotalScore__c  / Completed_Surveys__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the average score for this survey?</inlineHelpText>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Surveys__c</fullName>
        <label>Completed Surveys</label>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Groups_in_Survey__c</fullName>
        <description>How many question groups are there in this survey</description>
        <inlineHelpText>How many question groups are there in this survey</inlineHelpText>
        <label>Groups in Survey</label>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Score__c</fullName>
        <label>Min Score</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questions_in_Survey__c</fullName>
        <description>How many questions are in this survey?</description>
        <inlineHelpText>How many questions are in this survey?</inlineHelpText>
        <label>Questions in Survey</label>
        <summarizedField>QwikScore_Question_Group__c.Questions_in_Group__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey_Description__c</fullName>
        <description>What is the survey about?</description>
        <inlineHelpText>What is the survey about?</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Setup_Completion_Percent__c</fullName>
        <description>How close is this this survey to being completely set up?</description>
        <formula>Total_Completion_Percent__c / Groups_in_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How close is this this survey to being completely set up?</inlineHelpText>
        <label>Survey Setup Completion Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <label>TotalScore</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completion_Percent__c</fullName>
        <description>The total percent of all group weights (used for calculating survey progress completion)</description>
        <inlineHelpText>The total percent of all group weights (used for calculating survey progress completion)</inlineHelpText>
        <label>Total Completion Percent</label>
        <summarizedField>QwikScore_Question_Group__c.Total_Question_Weight__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Group_Weight__c</fullName>
        <description>How much do all the created groups weights add up to? Should be 100% for a completed survey</description>
        <inlineHelpText>How much do all the created groups weights add up to? Should be 100% for a completed survey</inlineHelpText>
        <label>Total Group Weight</label>
        <summarizedField>QwikScore_Question_Group__c.Group_Weight__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <description>What is the total percentage weight represented by all attached question groups (should be 100% for a survey that is ready to be taken).</description>
        <inlineHelpText>What is the total percentage weight represented by all attached question groups (should be 100% for a survey that is ready to be taken).</inlineHelpText>
        <label>Total Weight</label>
        <summarizedField>QwikScore_Question_Group__c.Group_Weight__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_exceed_100_total_group_weight</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Weight__c  &gt; 100</errorConditionFormula>
        <errorMessage>You cannot exceed 100% for the total group weight of a survey. Please reduce the weight of associated groups to total 100%.</errorMessage>
    </validationRules>
</CustomObject>